--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 
     <div class="monthly-budgets-section">
         <h2>Monthly Budget Limits</h2>
+        <div class="budget-limit-controls">
+            <label for="showBudgetCategory">Show/Add Budget For:</label>
+            <select id="showBudgetCategory">
+                <!-- Options will be populated by JavaScript -->
+            </select>
+        </div>
         <div id="budgetLimitsContainer">
             <!-- Budget limit inputs will be dynamically added here by JavaScript -->
         </div>
